<resources>
    <string name="app_name">VocabBook</string>

    <!-- ACTIVITIES -->
    <string name="create_new_vocab_activity">Neue Vokabel erstellen</string>
    <string name="edit_vocab_activity">Vokabel ändern</string>
    <string name="my_vocab_activity">Meine Vokabeln</string>
    <string name="my_categories_activity">Meine Sammlungen</string>
    <string name="category_contents_activity">Sammlung</string>
    <string name="vocab_test_activity">Vokabel Test</string>
    <string name="vocab_test_setup_activity">Test Einstellungen</string>

    <!-- ACTIONS -->
    <string name="action_create_vocab">Neue Vokabel erstellen</string>

    <!-- BUTTONS -->
    <string name="button_goto_vocab">Meine Vokabeln</string>
    <string name="button_goto_categories">Meine Sammlungen</string>
    <string name="button_goto_vocab_test">Vokabel Test</string>

    <string name="button_add">Hinzufügen</string>
    <string name="button_save">Speichern</string>

    <string name="button_testout">TestOut</string>
    <string name="button_test_mode">Modus: Vokabeln abfragen</string>
    <string name="button_confirm_input">Eingabe</string>

    <!-- HINTS -->
    <string name="hint_create_category">Neue Sammlung...</string>
    <string name="hint_word_input">Neues Wort</string>
    <string name="hint_translation_input">Übersetzung</string>
    <string name="hint_add_notes">Notizen eintragen...</string>
    <string name="hint_search_vocab"> Suche nach Vokabel...</string>
    <string name="hint_answer_input">Antwort eingeben...</string>

    <!-- LABELS -->
    <string name="label_input_notes">Notizen</string>
    <string name="label_add_vocab_to_category">zu einer Sammlung hinzufügen</string>
    <string name="label_expand_notes">▼Notizen anzeigen...</string>

    <string name="label_requested_language">Antworte in folgender Sprache: </string>
    <string name="label_score">Punkte: </string>
    <string name="label_errors">Fehler: </string>

    <string name="label_loading_next_vocab">Nächste Vokabel wird geladen</string>

    <!-- PROMPTS -->
    <string name="prompt_language">Sprache</string>
    <string name="prompt_test_all_vocab">Alle Vokabeln abfragen</string>

    <string-array name="language_arrays">
        <item>Sprache</item>
        <item>Afrikaans</item>
        <item>Albanisch</item>
        <item>Arabisch</item>
        <item>Armenisch</item>
        <item>Aserbaidschanisch</item>
        <item>Baskisch</item>
        <item>Bengalisch</item>
        <item>Bosnisch</item>
        <item>Bulgarisch</item>
        <item>Burmesisch</item>
        <item>Cebuano</item>
        <item>Chichewa</item>
        <item>Chinesisch</item>
        <item>Dänisch</item>
        <item>Deutsch</item>
        <item>Englisch</item>
        <item>Esperanto</item>
        <item>Estnisch</item>
        <item>Finnisch</item>
        <item>Französisch</item>
        <item>Galizisch</item>
        <item>Georgisch</item>
        <item>Griechisch</item>
        <item>Gujarati</item>
        <item>Haitianisch</item>
        <item>Hausa</item>
        <item>Hebräisch</item>
        <item>Hindi</item>
        <item>Hmong</item>
        <item>Igbo</item>
        <item>Indonesisch</item>
        <item>Irisch</item>
        <item>Isländisch</item>
        <item>Italienisch</item>
        <item>Japanisch</item>
        <item>Javanesisch</item>
        <item>Jiddisch</item>
        <item>Kannada</item>
        <item>Kasachisch</item>
        <item>Katalanisch</item>
        <item>Khmer</item>
        <item>Koreanisch</item>
        <item>Kroatisch</item>
        <item>Lao</item>
        <item>Lateinisch</item>
        <item>Litauisch</item>
        <item>Malabarisch</item>
        <item>Malagasy</item>
        <item>Malaysisch</item>
        <item>Maltesisch</item>
        <item>Maori</item>
        <item>Marathisch</item>
        <item>Mazedonisch</item>
        <item>Mongolisch</item>
        <item>Nepalisch</item>
        <item>Niederländisch</item>
        <item>Norwegisch</item>
        <item>Persisch</item>
        <item>Polnisch</item>
        <item>Portugiesisch</item>
        <item>Punjabi</item>
        <item>Rumänisch</item>
        <item>Russisch</item>
        <item>Schwedisch</item>
        <item>Serbisch</item>
        <item>Sesotho</item>
        <item>Singhalesisch</item>
        <item>Slowakisch</item>
        <item>Slowenisch</item>
        <item>Somali</item>
        <item>Spanisch</item>
        <item>Suaheli</item>
        <item>Sundanesisch</item>
        <item>Tadschikisch</item>
        <item>Tagalog</item>
        <item>Tamil</item>
        <item>Telugu</item>
        <item>Thailändisch</item>
        <item>Tschechisch</item>
        <item>Türkisch</item>
        <item>Ukrainisch</item>
        <item>Ungarisch</item>
        <item>Urdu</item>
        <item>Usbekisch</item>
        <item>Vietnamesisch</item>
        <item>Walisisch</item>
        <item>Weißrussisch</item>
        <item>Yoruba</item>
        <item>Zulu</item>
    </string-array>

    <string-array name="category_arrays">
        <item>zur Sammlung hinzufügen</item>
    </string-array>


</resources>
